[project]
name = "power-grid-mapper"
version = "1.0.0"
description = "U.S. Power Grid Supply-Demand-Congestion Mapper"
requires-python = ">=3.11"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "sqlalchemy>=2.0.0",
    "mysql-connector-python>=8.0.0",
    "pymysql>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "jupyter>=1.0.0",
    "plotly>=5.13.0",
    "ipywidgets>=8.0.0",
    "pytest>=7.2.0",
    "python-dateutil>=2.8.0",
    "pydantic>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
